---------------------------
testresources release notes
---------------------------

IN DEVELOPMENT
--------------

IMPROVEMENTS
~~~~~~~~~~~~

* Substantially improved documentation in README. (mbp)

* Rename TestResource to TestResourceManager leaving TestResource as an alias.
  Fixes bug #520769.

0.2.3
-----

CHANGES
~~~~~~~

IMPROVEMENTS
~~~~~~~~~~~~

* Distribute doc/*.py in the source tarball.

* New helper testresources.GenericResource which should remove the need for
  much boilerplate when using testresources with existing test fixtures.

BUG FIXES
~~~~~~~~~

API CHANGES
~~~~~~~~~~~

* New public functions testresources.setUpResources and
  testresources.tearDownResources for folk that cannot easily use
  ResourcedTestCase. Fixes bug #504146.

INTERNALS
~~~~~~~~~

0.2.2
-----

BUG FIXES
~~~~~~~~~

* OptimisingTestSuite.addTest was not unpacking OptimisingTestSuite instances.
  When using testresources.TestLoader to load tests this was generating an
  unoptimised layout, with each test in its own little suite, and no resource
  sharing happening.

0.2.1
------

A small bugfix release for compatibility with newer testtools.

INTERNALS
~~~~~~~~~

* One test case wasn't upcalling setUp properly, causing test failures with
  more recent testtools that check for this mistake.

0.2
---

  CHANGES:

    * testresources needs testtools to run the testresources test suite. You
      can still use testresources without using testtools. (Jonathan Lange)

  IMPROVEMENTS:

    * Many more docstrings. (Jonathan Lange)

    * Expanded README. (Jonathan Lange)

    * Expanded TODO. (Jonathan Lange)

    * Resources can now be reset by overriding TestResource.reset, which for
      some resources is significantly cheaper. If checking for dirtiness is
      expensive, isDirty can also be overridden.
      (James Henstridge, Robert Collins)

    * Started keeping a NEWS file! (Jonathan Lange)

    * Resource creation and destruction are traced by calling methods on the